--- a/frontEnd/02JavaScript/02APIs/day06-code/01-正则表达式的使用.html
+++ b/frontEnd/02JavaScript/02APIs/day06-code/01-正则表达式的使用.html
@@ -14,7 +14,9 @@
     // 1.定义规则
     const reg = /前端/
     // 2.是否匹配
-    console.log(reg.test(str));
+    // console.log(reg.test(str)); // true
+    // 3.exec()
+    console.log(reg.exec(str)); // 返回数组
   </script>
 </body>
 
