--- a/frontEnd/02JavaScript/02APIs/day06-code/02-元字符.html
+++ b/frontEnd/02JavaScript/02APIs/day06-code/02-元字符.html
@@ -68,6 +68,21 @@
     console.log(/^哈{4,6}$/.test('哈哈哈哈哈')); // true
     console.log(/^哈{4,6}$/.test('哈哈哈哈哈哈')); // true
     console.log(/^哈{4,6}$/.test('哈哈哈哈哈哈哈')); // false
+
+    // 字符类 [abc] 只选一个
+    console.log(/^[abc]$/.test('a')); // true
+    console.log(/^[abc]$/.test('b')); // true
+    console.log(/^[abc]$/.test('c')); // true
+    console.log(/^[abc]$/.test('ab')); // false
+    console.log(/^[abc]{2}$/.test('ab')); // true
+
+    // 字符类 [a-z] 只选一个
+    console.log(/^[a-z]$/.test('p')); // true
+    console.log(/^[A-Z]$/.test('P')); // true
+    console.log(/^[0-9]$/.test(2)); // true
+    console.log(/^[a-zA-A0-9]$/.test(2)); // true
+    console.log(/^[a-zA-A0-9]$/.test('p')); // true
+    console.log(/^[a-zA-A0-9]$/.test('P')); // true
   </script>
 </body>
 
