--- a/frontEnd/02JavaScript/03upgrade/day01-code/07-函数参数剩余参数.html
+++ b/frontEnd/02JavaScript/03upgrade/day01-code/07-函数参数剩余参数.html
@@ -10,7 +10,7 @@
 <body>
   <script>
     function getSum(a, b, ...arr) {
-      console.log(arr)
+      console.log(arr) // 使用的时候不需要写...
     }
     getSum(2, 3)
     getSum(1, 2, 3, 4, 5)
