--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>home</title>
 </head>
 <body>
-  home
+  于昕冉，我喜欢你！
+  <div></div>
+  <script>
+    const date = Date()
+  </script>
 </body>
 </html>
