update: 递归函数获取时间

--- a/frontEnd/02JavaScript/03upgrade/day04-code/05-模拟setInterval效果.html
+++ b/frontEnd/02JavaScript/03upgrade/day04-code/05-模拟setInterval效果.html
@@ -4,14 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>home</title>
+  <title>Document</title>
 </head>
 
 <body>
-  于昕冉，我喜欢你！
   <div></div>
   <script>
-    // 获取时间（递归函数）
     function getTime() {
       document.querySelector('div').innerHTML = new Date().toLocaleString()
       setTimeout(getTime, 1000);
