--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
   于昕冉，我喜欢你！
   <div></div>
+  <div>
+    <video src="./public/video/2024-10-23.mp4" width="200" controls></video>
+  </div>
   <script>
     // 获取时间（递归函数）
     function getTime() {
