--- a/frontEnd/02JavaScript/03upgrade/day04-code/15-性能优化之防抖.html
+++ b/frontEnd/02JavaScript/03upgrade/day04-code/15-性能优化之防抖.html
@@ -31,7 +31,7 @@
     // box.addEventListener('mousemove', mouseMove)
 
     // 利用lodash库实现防抖 - 500ms之后才会+1
-    // 语法：_debounce(fun, 时间)
+    // 语法：_.debounce(fun, 时间)
     box.addEventListener('mousemove', _.debounce(mouseMove, 500))
   </script>
 </body>
