--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-  于昕冉，我喜欢你！
+  <!-- 于昕冉，我喜欢你！ -->
   <div></div>
-  <div>
+  <!-- <div>
     <video src="./public/video/2024-10-23.mp4" width="200" controls></video>
-  </div>
+  </div> -->
   <script>
     // 获取时间（递归函数）
     function getTime() {
